test automation for DQE